Fix mobile overflow: use fluid width on global main element

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,10 +27,11 @@ body {
 }
 
 main {
-	width: 720px;
+	width: 100%;
 	max-width: calc(100% - 2em);
 	margin: auto;
 	padding: 3em 1em;
+	box-sizing: border-box;
 }
 
 h1, h2, h3, h4, h5, h6 {
